# scvd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: api.rs  app.rs  client.rs  config.rs  download.rs  history.rs  logging.rs  login.rs  main.rs  qr_login.rs  types.rs
