[package]
name = "sjtu-canvas-video-download"
version = "2.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "stream", "gzip", "brotli", "charset", "hickory-dns", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.20"
anyhow = "1"
md-5 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
url = "2"
tungstenite = { version = "0.24", features = ["url", "rustls-tls-webpki-roots"] }
image = "0.25"
viuer = "0.8"
console = "0.15"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
futures = "0.3"
hex = "0.4"
indicatif = "0.17"
